--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AKSHAYAVARDHAN S | Cybersecurity Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+    <!-- HERO -->
+    <header class="hero">
+        <h1>AKSHAYAVARDHAN S</h1>
+        <p class="subtitle">Cybersecurity Student | Penetration Testing Enthusiast</p>
+        <p class="tagline">
+            I build security tools, analyze vulnerabilities, and document real-world attack and defense scenarios.
+        </p>
+        <div class="links">
+            <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
+            <a href="mailto:yourmail@example.com">Email</a>
+        </div>
+    </header>
+
+    <!-- ABOUT -->
+    <section>
+        <h2>About Me</h2>
+        <p>
+            I am a cybersecurity student with a strong interest in penetration testing and practical security engineering.
+            I have built a personal firewall and an AES-based file encryption system, and I actively develop my skills
+            through labs, custom tools, and security write-ups.
+        </p>
+    </section>
+
+    <!-- SKILLS -->
+    <section>
+        <h2>Skills</h2>
+        <ul class="skills">
+            <li>Networking Fundamentals</li>
+            <li>Linux & Windows Internals</li>
+            <li>Cryptography Basics (AES, Hashing)</li>
+            <li>Web Security (OWASP Top 10)</li>
+            <li>Nmap, Burp Suite, Wireshark</li>
+            <li>Python, Git & GitHub</li>
+        </ul>
+    </section>
+
+    <!-- PROJECTS -->
+    <section>
+        <h2>Projects</h2>
+
+        <div class="project">
+            <h3>🔥 Personal Firewall</h3>
+            <p>
+                A host-based firewall that monitors and controls inbound and outbound traffic using rule-based filtering.
+            </p>
+            <p class="tech">Tech: Python, Networking</p>
+            <a href="https://github.com/YOUR_GITHUB_USERNAME/firewall-repo" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>🔐 AES File Encryptor</h3>
+            <p>
+                A secure file encryption tool using AES to protect sensitive files from unauthorized access.
+            </p>
+            <p class="tech">Tech: Python, AES</p>
+            <a href="https://github.com/YOUR_GITHUB_USERNAME/aes-encryptor-repo" target="_blank">View on GitHub</a>
+        </div>
+
+    </section>
+
+    <!-- WRITEUPS -->
+    <section>
+        <h2>Write-ups & Labs</h2>
+        <ul>
+            <li>TryHackMe – Basic Pentesting</li>
+            <li>Firewall Bypass Analysis</li>
+            <li>AES Misuse & Common Crypto Pitfalls</li>
+        </ul>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="contact">
+        <h2>Contact</h2>
+        <p>Email: yourmail@example.com</p>
+        <p>GitHub: github.com/YOUR_GITHUB_USERNAME</p>
+    </section>
+
+    <footer>
+        <p>© 2025 AK</p>
+    </footer>
+
+</body>
+</html>
 
