--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             I build security tools, analyze vulnerabilities, and document real-world attack and defense scenarios.
         </p>
         <div class="links">
-            <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
-            <a href="mailto:yourmail@example.com">Email</a>
+            <a href="https://github.com/akshayavardhan.github.io" target="_blank">GitHub</a>
+            <a href="mailto:akshayavardhan20061418@gmail.com">Email</a>
         </div>
     </header>
 
@@ -81,8 +81,8 @@
     <!-- CONTACT -->
     <section class="contact">
         <h2>Contact</h2>
-        <p>Email: yourmail@example.com</p>
-        <p>GitHub: github.com/YOUR_GITHUB_USERNAME</p>
+        <p>Email: akshayavardhan20061418@gmail.com</p>
+        <p>GitHub: github.com/akshayavardhan.github.io</p>
     </section>
 
     <footer>
